--- a/FundooWebApi/angular.json
+++ b/FundooWebApi/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "FundooWeb": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "FundooWeb"
+    }
+  },
+  "defaultProject": "FundooWeb",
+  "cli": {
+    "analytics": "ec207637-e54f-454a-9108-a4b98b9fb254"
+  }
 }
