--- a/FundooWebApi/package.json
+++ b/FundooWebApi/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.0.3",
     "amazing-time-picker": "^1.8.0",
     "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
